added requests and redirects module 6

--- a/petfax/templates/facts/new.html
+++ b/petfax/templates/facts/new.html
@@ -14,7 +14,7 @@
             Share your animal facts here!
         </div>
         <div class="facts-container">
-            <form>
+            <form action="/facts" method="POST">
                 <label for="submitter"><h2>Name</h2></label>
                 <input name="submitter" type="text">
                 <br/>
